--- a/src/data/course/full-stack-ft.us.yaml
+++ b/src/data/course/full-stack-ft.us.yaml
@@ -1,7 +1,7 @@
 meta_info:
   slug: full-time-full-stack-developer   #<----URL: https://4geeksacademy.com/us/coding-bootcamps/full-time-full-stack-developer
-  title: "Full Stack Developer studying full-time for 10 weeks."
-  description: "Become a Full Stack Developer in just 10 weeks. Study full-time to accelerate your learning and change your life as quickly as possible." 
+  title: "Full Stack Developer studying full-time for 12 weeks."
+  description: "Become a Full Stack Developer in just 12 weeks. Study full-time to accelerate your learning and change your life as quickly as possible." 
   image: "/images/og-preview/full-stack-ft.us.png"
   bc_slug: "full-stack-ft"
   visibility: "unlisted"
@@ -20,7 +20,7 @@ meta_info:
     ]
   related_clusters: ["full-stack-developer","trends-and-tech"]
   template: "course-fullstack-ft"
-  duration: "P9W"  # 9 weeks duration in ISO 8601 format
+  duration: "P12W"  # 12 weeks duration in ISO 8601 format
   
 
 apply_form:
@@ -224,13 +224,13 @@ two_columns:
 details:
   about:
       title: "About the program"
-      sub_title: 'Master the most in-demand technologies and learn to build modern applications using AI. Learn algorithm scripting and build awesome apps using front-end libraries. Utilize APIs to consume data and enhance your app’s functionality. Develop and present your own project, gaining game-changing hands-on experience. Learn to <strong style="text-decoration: none; color: #000000; font-weight: 500;">code alongside AI to unlock a faster, more creative way to build real apps from day one. Collaborate with powerful tools like Cursor to generate, debug,  iterate and ship with speed and precision</strong>. Reshape your mindset and embrace the programming, logic, and research skills to succeed in today’s tech industry.'
+      sub_title: 'Master the most in-demand technologies and learn to build modern applications using AI. Learn algorithm scripting and build awesome apps using front-end libraries. Utilize APIs to consume data and enhance your app’s functionality. Develop and present your own project, gaining game-changing hands-on experience. Learn to <strong style="text-decoration: none; color: #000000; font-weight: 600;">code alongside AI to unlock a faster, more creative way to build real apps from day one. Collaborate with powerful tools like Cursor to generate, debug,  iterate and ship with speed and precision</strong>. Reshape your mindset and embrace the programming, logic, and research skills to succeed in today’s tech industry.'
       list:
         - label: "Duration"
           content: "12 Weeks"
           icon: "duration-icon"
         - label: "Location"
-          content: "4Geeks Academy Headquarters, Miami"
+          content: "Miami, FL and Dallas, TX"
           icon: "location-icon"
         - label: "Schedule"
           content: "Monday-Friday 9AM-5:30PM"
