ADD: translation to full time program

--- a/src/data/plans/full-stack.es.yml
+++ b/src/data/plans/full-stack.es.yml
@@ -27,7 +27,7 @@ full_time:
     price: "Desde $349/mes"
     bullets:
       - "Estamos totalmente comprometidos en hacer que nuestra educación sea accesible y ofrecemos múltiples planes de pago y opciones de financiamiento para cumplir nuestra promesa."
-      - "Puedes adaptar tu camino de aprendizaje a tus necesidades financieras. Elige incluir o excluir nuestros servicios de apoyo profesional, o inscríbete con una Garantía de Empleo."
+      - "Puedes adaptar tu camino de aprendizaje a tus necesidades financieras. Este plan incluye una Garantía de Empleo."
       - "También ofrecemos varias opciones de becas completas o parciales para las que puedas ser elegible. Contáctanos para más detalles."
     icons:
       - "/images/ascent_logo.png"
