--- a/src/data/plans/full-stack.us.yml
+++ b/src/data/plans/full-stack.us.yml
@@ -58,7 +58,7 @@ full_time:
     bullets:
       - "Focus on your career and not how to afford your education"
       - "We're fully committed to making our education accessible and offer multiple payment plans and financing options to uphold our promise."
-      - "You can adapt your learning path to your financial needs. Choose to include or exclude our career support services, or enroll with a Job Guarantee."
+      - "You can adapt your learning path to your financial needs. This plan includes a Job Guarantee."
       - "We also provide several full or partial scholarship options that you may be eligible for. Contact us for further details."
     icons: 
       - "/images/landing/miamitech-logo.png"  
