UPDATE: Navbar USA locations are now divided

--- a/src/data/components/navbar/navbar.es.yaml
+++ b/src/data/components/navbar/navbar.es.yaml
@@ -104,24 +104,38 @@ navbar:
       paragraph: "Aprende en persona o elije un programa completamente remoto. Inscríbete y forma parte de una comunidad de programación global."
       width: "610px"
       links:
-        - title: "US & Canada"
+        - title: "Miami, USA"
+          content: "Únete a nuestro campus de Miami para aprendizaje presencial o híbrido"
           sub_links:
-            - title: "Miami, USA"
+            - title: "Downtown Miami"
               link_to: "/es/coding-campus/bootcamp-programacion-miami"
-            - title: "Orlando, USA"
-              link_to: "/es/coding-campus/bootcamp-programacion-orlando"
+        - title: "Dallas, USA"
+          content: "Únete a nuestro campus de Dallas para aprendizaje presencial o híbrido"
+          sub_links:
+            - title: "Dallas, Texas"
+              link_to: "/es/coding-campus/bootcamp-programacion-dallas"
+        - title: "Remoto, USA"
+          content: "Aprende desde cualquier lugar con nuestros programas online"
+          sub_links:
+            - title: "Programas Online"
+              link_to: "/es/coding-campus/online-bootcamp-programacion"
+        - title: "Resto de América"
+          content: "Otras ubicaciones en USA y opciones online"
+          sub_links:
             - title: "Atlanta, USA"
               link_to: "/es/coding-campus/bootcamp-programacion-atlanta"
             - title: "Chicago, USA"
               link_to: "/es/coding-campus/bootcamp-programacion-chicago"
-            - title: "Los Angeles, USA"
-              link_to: "/es/coding-campus/bootcamp-programacion-losangeles"
-            - title: "New York, USA"
-              link_to: "/es/coding-campus/bootcamp-programacion-nyc"
             - title: "Houston, USA"
               link_to: "/es/coding-campus/bootcamp-programacion-houston"
             - title: "Austin, USA"
               link_to: "/es/coding-campus/bootcamp-programacion-austin"
+            - title: "Los Angeles, USA"
+              link_to: "/es/coding-campus/bootcamp-programacion-losangeles"
+            - title: "New York, USA"
+              link_to: "/es/coding-campus/bootcamp-programacion-nyc"
+            - title: "Orlando, USA"
+              link_to: "/es/coding-campus/bootcamp-programacion-orlando"
             - title: "Tampa, USA"
               link_to: "/es/coding-campus/bootcamp-programacion-tampa"
             - title: "Toronto, Canada"
