--- a/src/data/components/navbar/navbar.us.yaml
+++ b/src/data/components/navbar/navbar.us.yaml
@@ -106,31 +106,42 @@ navbar:
       paragraph: "Learn in-person or choose a fully-remote program. Enroll and become part of a global coding community."
       width: "550px"
       links:
-        - title: "US & Canada"
-          content: "With the online modality you have access to our physical locations worldwide"
+        - title: "Miami, USA"
+          content: "Join our Miami campus for in-person or hybrid learning"
           sub_links:
-            - title: "Miami, USA"
+            - title: "Downtown Miami"
               link_to: "/us/coding-campus/coding-bootcamp-miami"
-            - title: "Orlando, USA"
-              link_to: "/us/coding-campus/coding-bootcamp-orlando"
-            - title: "Tampa, USA"
-              link_to: "/us/coding-campus/tampa-coding-bootcamp"
+        - title: "Dallas, USA"
+          content: "Join our Dallas campus for in-person or hybrid learning"
+          sub_links:
+            - title: "Dallas, Texas"
+              link_to: "/us/coding-campus/coding-bootcamp-dallas"
+        - title: "Remote, USA"
+          content: "Learn from anywhere with our online programs"
+          sub_links:
+            - title: "Online Programs"
+              link_to: "/us/coding-campus/online-coding-bootcamp"
+        - title: "Rest of America"
+          content: "Other US locations and online options"
+          sub_links:
             - title: "Atlanta, USA"
               link_to: "/us/coding-campus/coding-bootcamp-atlanta"
             - title: "Chicago, USA"
               link_to: "/us/coding-campus/coding-bootcamp-chicago"
-            - title: "Los Angeles, USA"
-              link_to: "/us/coding-campus/coding-bootcamp-losangeles"
-            - title: "New York, USA"
-              link_to: "/us/coding-campus/coding-bootcamp-nyc"
             - title: "Houston, USA"
               link_to: "/us/coding-campus/coding-bootcamp-houston"
             - title: "Austin, USA"
               link_to: "/us/coding-campus/coding-bootcamp-austin"
+            - title: "Los Angeles, USA"
+              link_to: "/us/coding-campus/coding-bootcamp-losangeles"
+            - title: "New York, USA"
+              link_to: "/us/coding-campus/coding-bootcamp-nyc"
+            - title: "Orlando, USA"
+              link_to: "/us/coding-campus/coding-bootcamp-orlando"
+            - title: "Tampa, USA"
+              link_to: "/us/coding-campus/tampa-coding-bootcamp"
             - title: "Toronto, Canada"
               link_to: "/us/coding-campus/coding-bootcamp-orlando"
-            - title: "Rest of America"
-              link_to: "/us/coding-campus/online-coding-bootcamp"
         - title: "Europe"
           content: "With the online modality you have access to our physical locations worldwide"
           sub_links:
